# stm32-nucleof4

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Readme.md
00-user_button/: CMakeLists.txt  main.c
01-printf_to_uart/: CMakeLists.txt  main.c  newlib.c  stm32f4xx_hal_it.c  stm32f4xx_hal_msp.c
02-rtc_date_time/: CMakeLists.txt  main.c  stm32f4xx_hal_msp.c
03-rtc_alarm/: CMakeLists.txt  main.c  stm32f4xx_hal_it.c  stm32f4xx_hal_msp.c
04-lcd_display/: CMakeLists.txt  main.c  stm32f4xx_hal_it.c  stm32f4xx_hal_msp.c
04-lcd_display/lcd/: Lcd.h
04-lcd_display/lcd/drivers/: Lcd_driver.h
04-lcd_display/lcd/drivers/HD44780/: HD44780.c
05-temp_sensor/: CMakeLists.txt  main.c  stm32f4xx_hal_it.c  stm32f4xx_hal_msp.c
05-temp_sensor/lcd/: Lcd.c
05-temp_sensor/lcd/drivers/HD44780/: HD44780.c  HD44780.h
05-temp_sensor/temp/: Temp.c  Temp.h
05-temp_sensor/temp/drivers/: Temp_driver.h
05-temp_sensor/temp/drivers/DHT11/: DHT11.c  DHT11.h
06-usb_device/: CMakeLists.txt  main.c  newlib.c  stm32f3xx_hal_conf.h  stm32f3xx_hal_it.c  stm32f3xx_hal_msp.c  usbd_conf.c  usbd_conf.h  usbd_desc.c  usbd_desc.h  usbd_gamepad_if.c  usbd_gamepad_if.h
07-discovery_board_f3/: CMakeLists.txt  main.c  selftest.c  stm32f3xx_hal_conf.h  stm32f3xx_it.c  usbd_conf.c  usbd_desc.c
blinky-cmsis/: CMakeLists.txt  main.c
blinky-hal/: CMakeLists.txt  main.c  stm32f4xx_hal_it.c  stm32f4xx_hal_msp.c
